word wrap fixed

--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ ul li {
     border-style: solid;
     padding: 1em;
     margin: 5px;
+    word-wrap: break-word;
 }
 
 .due-date {
